src/scss/style.scss
@import "reset.scss";
@import "mixins.scss";
@import "fonts.scss";

*,
*::after,
*::before{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
html{
    scroll-behavior: smooth;
}
body{
    overflow-x: hidden;
    background: #02030F;

    @include monument(400);
}
body::-webkit-scrollbar {
    width: 10px;
}   
body::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    background: #1A1C25;
}   
body::-webkit-scrollbar-thumb {
  background-color: rgba(97, 97, 97, 0.8);
  border-radius: 10px;
}
body::-webkit-scrollbar-thumb:hover{
    background-color: rgb(97, 97, 97);
}
.container{  
    width: 100%;
    margin: 0 auto;
    padding: 0 40px;

    @media (max-width: 991px){
        padding: 0 22px;
    }
}

